--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.0.1",
   "description": "Templating language for structured data",
   "main": "index.js",
-  "dependencies": {
-    "mustache": "^2.3.0"
-  },
   "scripts": {
-    "test": "node test.js"
+    "test": "npm run lint && node test.js",
+    "lint": "eslint ."
   },
   "keywords": [
     "mustache",
@@ -18,5 +16,13 @@
     "kubernetes"
   ],
   "author": "James Haggerty",
-  "license": "Apache-2.0"
+  "license": "Apache-2.0",
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1"
+  }
 }
