Implement deep merge, 'overrides' and deletions
Also a little more doco and testing (but still inadequate).

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Templating language for structured data",
   "main": "index.js",
   "scripts": {
+    "preversion": "npm test",
     "test": "npm run lint && node test.js",
     "lint": "eslint ."
   },
